--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body {
   width: 100vw;
+  height: 100vh;
   margin: 0;
   box-sizing: border-box;
   padding: 0;
@@ -16,10 +17,12 @@ body {
   display: flex;
   justify-content: flex-end;
   width: 100vw;
+  height: 4em;
+  padding-right: 1em;
 }
 
 #nav-text-links {
-  margin: 5px;
+  margin-right: 2rem;
   padding: 0;
   justify-self: flex-end;
   background-color: red;
@@ -28,6 +31,7 @@ body {
 
 #nav-icon {
   align-self: center;
+  margin-right: 2rem;
 }
 
 #i {
@@ -36,8 +40,9 @@ body {
 }
 
 .nav-img {
-  padding: 1rem;
+  padding: 0.5em;
   background-color: aliceblue;
+  align-self: center;
 }
 
 #nav-img {
@@ -51,10 +56,11 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100vw;
+  height: 87vh;
   background-color: yellow;
 }
 .google-logo-container {
-  margin: 9rem auto 1rem;
+  margin: 8% auto 1%;
 }
 
 #logo {
@@ -62,19 +68,19 @@ body {
 }
 
 #search-bar-cont {
-  width: 50%;
+  width: 600px;
   background-color: red;
-  height: 3.5rem;
+  height: 50px;
   border-radius: 2.5rem;
   border-width: 1px;
   border-style: solid;
   padding: 0.2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2%;
 }
 
 #search-bar {
-  width: 92%;
-  height: 3rem;
+  width: 91%;
+  height: 100%;
   border-width: 1px;
   border-style: solid;
   padding-left: 1rem;
@@ -84,7 +90,14 @@ body {
   width: 10%;
   top: 0;
   right: 30px;
-  padding-left: 0.2rem;
+  padding-left: 0.4rem;
+}
+
+#voice-icon {
+  width: 10%;
+  top: 0;
+  right: 30px;
+  padding-left: 0.4rem;
 }
 
 button {
@@ -99,8 +112,7 @@ button {
 }
 
 #lang-cont {
-  margin-top: 0.5rem;
-  margin-bottom: 9.4rem;
+  margin-top: 1%;
 }
 
 .lang-options {
@@ -120,14 +132,21 @@ button {
   display: flex;
   list-style-type: none;
   width: 100vw;
+  height: 3em;
   padding: 1rem 1rem 1rem;
   background-color: rgb(189, 186, 186);
+}
+
+#footer-cont {
+  bottom: 0;
+  position: fixed;
 }
 
 #footer2 {
   bottom: 0;
   background-color: rgb(189, 186, 186);
   border-top: 1px black solid;
+  height: 3em;
 }
 
 #footer2-list {
