--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Rubik;
 }
 
 body {
@@ -13,7 +16,6 @@ body {
 }
 
 .nav {
-  background-color: blue;
   display: flex;
   justify-content: flex-end;
   width: 100vw;
@@ -25,8 +27,11 @@ body {
   margin-right: 2rem;
   padding: 0;
   justify-self: flex-end;
-  background-color: red;
   align-self: center;
+  text-decoration: none;
+  font-size: 15px;
+  color: rgb(78, 78, 78);
+  font-weight: 200;
 }
 
 #nav-icon {
@@ -39,9 +44,13 @@ body {
   background-color: aqua;
 }
 
+#menu-img {
+  height: 20px;
+  width: 20px;
+}
+
 .nav-img {
   padding: 0.5em;
-  background-color: aliceblue;
   align-self: center;
 }
 
@@ -57,7 +66,6 @@ body {
   flex-direction: column;
   width: 100vw;
   height: 87vh;
-  background-color: yellow;
 }
 .google-logo-container {
   margin: 8% auto 1%;
@@ -69,21 +77,26 @@ body {
 
 #search-bar-cont {
   width: 600px;
-  background-color: red;
+  background-color: white;
   height: 50px;
   border-radius: 2.5rem;
   border-width: 1px;
   border-style: solid;
+  border-color: rgb(211, 208, 208);
   padding: 0.2rem;
   margin-bottom: 2%;
+}
+
+#search-bar-cont:hover {
+  box-shadow: 1px 1px 0.7rem rgb(194, 191, 191);
 }
 
 #search-bar {
   width: 91%;
   height: 100%;
-  border-width: 1px;
-  border-style: solid;
+  border: none;
   padding-left: 1rem;
+  outline: none;
 }
 
 #search-icon {
@@ -97,14 +110,19 @@ body {
   width: 10%;
   top: 0;
   right: 30px;
-  padding-left: 0.4rem;
+  padding-left: 0.3rem;
+  padding-right: 0.1rem;
 }
 
 button {
   border: none;
-  background-color: rgb(204, 200, 200);
+  background-color: rgb(248, 239, 239);
   border-radius: 0.2rem;
-  padding: 0.7rem;
+  padding: 0.5rem 0.9rem 0.5rem;
+}
+
+button:hover {
+  box-shadow: 1px 1px 0.5rem rgb(194, 191, 191);
 }
 
 #google-search-but {
@@ -121,11 +139,18 @@ button {
 }
 
 #lang-title {
-  margin: 0rem 0.5rem 0rem;
+  margin: 3px 0.5rem 0rem;
 }
 
 #lang-links {
   margin: 0rem 0.5rem 0rem;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 100;
+}
+
+#lang-links:hover {
+  text-decoration: underline;
 }
 
 #footer1 {
@@ -134,7 +159,11 @@ button {
   width: 100vw;
   height: 3em;
   padding: 1rem 1rem 1rem;
-  background-color: rgb(189, 186, 186);
+  background-color: rgb(248, 239, 239);
+}
+
+h5 {
+  color: rgb(78, 78, 78);
 }
 
 #footer-cont {
@@ -142,16 +171,53 @@ button {
   position: fixed;
 }
 
-#footer2 {
-  bottom: 0;
-  background-color: rgb(189, 186, 186);
-  border-top: 1px black solid;
-  height: 3em;
+ul {
+  list-style-type: none;
 }
 
-#footer2-list {
+#footer-links {
+  text-decoration: none;
+  color: rgb(78, 78, 78);
+}
+
+#footer2 {
   display: flex;
-  list-style-type: none;
+  justify-content: space-between;
+  align-items: center;
   width: 100vw;
-  padding: 1rem 1rem 1rem;
+  background-color: rgb(248, 239, 239);
+  border-top: 1px rgb(211, 208, 208) solid;
+  height: 3em;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+#f2p1 {
+  display: flex;
+}
+
+#footer-links-left {
+  display: flex;
+  text-decoration: none;
+  flex-direction: row;
+  margin-right: 1rem;
+  color: rgb(78, 78, 78);
+  font-weight: lighter;
+}
+
+#footer-links-right {
+  display: flex;
+  text-decoration: none;
+  flex-direction: row;
+  margin-left: 1rem;
+  color: rgb(78, 78, 78);
+  font-weight: lighter;
+}
+
+#f2p2 {
+  display: flex;
+}
+
+#f2p3 {
+  display: flex;
 }
