finally done with responsiveness..

--- a/styles.css
+++ b/styles.css
@@ -69,14 +69,16 @@ body {
 }
 .google-logo-container {
   margin: 8% auto 1%;
+  display: flex;
+  justify-content: center;
 }
 
 #logo {
-  height: 90px;
+  width: 35%;
 }
 
 #search-bar-cont {
-  width: 600px;
+  width: 70%;
   background-color: white;
   height: 50px;
   border-radius: 2.5rem;
@@ -209,7 +211,7 @@ ul {
   display: flex;
   text-decoration: none;
   flex-direction: row;
-  margin-left: 1rem;
+  margin-right: 1rem;
   color: rgb(78, 78, 78);
   font-weight: lighter;
 }
@@ -220,4 +222,155 @@ ul {
 
 #f2p3 {
   display: flex;
+}
+
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .google-logo-container {
+    margin: 8% auto 1%;
+  }
+
+  #logo {
+    width: 35%;
+  }
+
+  #search-bar-cont {
+    width: 70%;
+    padding: 0.1rem;
+    margin-bottom: 3%;
+  }
+
+  #search-bar {
+    width: 86%;
+    height: 100%;
+    border: none;
+    padding-left: 1rem;
+    outline: none;
+  }
+  button {
+    border: none;
+    background-color: rgb(248, 239, 239);
+    border-radius: 0.2rem;
+    padding: 0.5rem 0.7rem 0.5rem;
+    font-size: 11px;
+  }
+
+  #lang-title {
+    margin: 5px 0.5rem 0rem;
+  }
+
+  #lang-links {
+    font-size: 10px;
+  }
+
+  h5 {
+    font-size: 11px;
+  }
+
+  #footer-links-left {
+    font-size: 11px;
+  }
+
+  #footer-links-right {
+    font-size: 11px;
+  }
+
+  #footer-links {
+    font-size: 11px;
+    font-style: normal;
+  }
+
+  #footer2 {
+    flex-direction: column;
+    align-items: center;
+    height: 7em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #nav-text-links {
+    margin-right: 1rem;
+    font-size: 10px;
+  }
+
+  #menu-img {
+    height: 15px;
+    width: 15px;
+  }
+
+  .nav-img {
+    padding: 0.4em;
+  }
+
+  #nav-img {
+    height: 30px;
+    width: 30px;
+  }
+
+  .google-logo-container {
+    margin: 8% auto 1%;
+  }
+
+  #logo {
+    width: 35%;
+  }
+
+  #search-bar-cont {
+    width: 70%;
+    padding: 0.1rem;
+    margin-bottom: 3%;
+  }
+
+  #search-bar {
+    width: 81%;
+    height: 100%;
+    border: none;
+    padding-left: 1rem;
+    outline: none;
+  }
+  button {
+    border: none;
+    background-color: rgb(248, 239, 239);
+    border-radius: 0.2rem;
+    padding: 0.5rem 0.7rem 0.5rem;
+    font-size: 11px;
+  }
+
+  #lang-title {
+    margin: 5px 0.5rem 0rem;
+  }
+
+  #lang-links {
+    font-size: 10px;
+  }
+
+  h5 {
+    font-size: 11px;
+  }
+
+  #footer-links-left {
+    font-size: 11px;
+  }
+
+  #footer-links-right {
+    font-size: 11px;
+  }
+
+  #footer-links {
+    font-size: 11px;
+    font-style: normal;
+  }
+
+  #footer2 {
+    flex-direction: column;
+    align-items: center;
+    height: 7em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
 }
